--- a/src/modules/callback/pages/genPdfTest.html
+++ b/src/modules/callback/pages/genPdfTest.html
@@ -9,11 +9,16 @@
         justify-content: center;
         align-items: center;
         background-color: aquamarine;
+        font-weight: bold;
+        display: inline;
+        text-decoration: underline;
       }
+
+      
     </style>
   </head>
   <body>
-    <div className="test">
+    <div style="text-indent:20px;">
       Date: ${`${today.getDate()}. ${ today.getMonth() + 1 }.
       ${today.getFullYear()}.`}
 
